<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">嘶哩嘶哩</string>
    <string name="app_sub_name" tools:ignore="ExtraTranslation">新番时间表</string>
    <string name="search">搜索</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="load_failed">加载失败，点击重试</string>
    <string name="load_end">没有更多数据</string>
    <!-- 权限文本 -->
    <string name="permissions">为了正常使用，需要以下权限!</string>
    <string name="permissions_error">未能获取到相关权限!</string>
    <!-- Home Title -->
    <string name="home_title">新番时间表</string>
    <string name="home_tag_title">条件筛选</string>
    <string name="home_recommend_title">动漫推荐</string>
    <string name="home_favorite_title">我的收藏</string>
    <string name="menu_load_error">加载失败</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="search_hint">请输入动漫名</string>
    <!-- 主页dialog文本 -->
    <string name="x5_info_title">注意</string>
    <string name="x5_info">此应用并非官方APP，并非所有番剧都能正常解析播放。\n仅供学习交流，禁止非法传播或用于商业用途。</string>
    <string name="x5_info_positive">OJBK</string>
    <!-- 空文本 -->
    <string name="empty">未能获取到任何信息</string>
    <!-- 解析相关文本 -->
    <string name="source_title">选择解析线路</string>
    <string name="source_1">线路①</string>
    <string name="source_2">线路②</string>
    <string name="source_3">线路③</string>
    <string name="source_4">线路④</string>
    <string name="source_5">线路⑤</string>
    <string name="source_6">线路⑥</string>
    <string name="source_7">自定义接口</string>
    <string name="source_8">访问原页面</string>
    <string name="source_9">打开视频源</string>
    <!-- 加载文本 -->
    <string name="loading">加载中</string>
    <string name="load_error">加载失败</string>
    <string name="load_desc_info">请在番剧详情加载完毕后再进行操作</string>
    <string name="no_more">数据全部加载完毕</string>
    <!-- btn文本 -->
    <string name="no_resources">暂无资源</string>
    <!-- msg文本 -->
    <string name="desc_toolbar_title">番剧详情</string>
    <string name="no_tag_url">该标签无内容信息</string>
    <string name="parsing">解析中，请稍后&#8230;</string>
    <string name="error_700">网络错误，请重试!</string>
    <string name="error_800">未能获取到播放地址\n1、解析方法不支持\n2、播放地址不存在\n3、可以尝试打开原页面去播放</string>
    <string name="join_ok">(´・ω・`) 自己追的番就要好好看完哦！</string>
    <string name="join_error">(﹁"﹁) 哼！竟然真的抛弃了人家。</string>
    <string name="parsing_error">解析出错\n代码无法解析该界面信息</string>
    <string name="should_be_used_web">尝试嗅探获取播放地址&#8230;</string>
    <string name="open_web_view">解析视频地址失败，尝试使用WebView打开</string>
    <string name="select_video_source">选择播放源</string>
    <string name="open_browser">网页访问</string>
    <!--<string name="no_playlist_error">根据国家相关部门规定\n本动画不准上架</string>-->
    <string name="no_playlist_error">该番剧暂时无法观看。</string>
    <!-- downDialog -->
    <string name="down_title">选择目标源</string>
    <string name="down_copy">已复制到剪切板</string>
    <!-- 播放地址未找到 -->
    <string name="play_not_found_title">解析失败</string>
    <string name="play_not_found_positive">访问原页面</string>
    <string name="play_not_found_negative">取消</string>
    <!-- drawer文本 -->
    <string name="tag_title">动漫分类</string>
    <string name="favorite_title">追番列表</string>
    <string name="setting_title">自定义</string>
    <!-- 设置界面文本 -->
    <string name="api">0</string>
    <string name="x5">X5内核&lt;若webView闪退需禁用&gt;</string>
    <string name="x5_up">启用</string>
    <string name="x5_down">禁用</string>
    <string name="page_title">设置参数</string>
    <string name="page_positive">确定</string>
    <string name="page_positive_edit">修改</string>
    <string name="page_negative">取消</string>
    <string name="page_def">恢复默认</string>
    <string name="domain_title">输入嘶哩嘶哩域名（PC端）</string>
    <string name="set_domain_ok">域名更改成功</string>
    <string name="set_domain_error1">参数不能为空</string>
    <string name="set_domain_error2">参数格式错误</string>
    <string name="api_error_1">参数不能为空</string>
    <string name="api_error_2">参数格式不正确</string>
    <string name="player">视频播放器</string>
    <string name="player_default">内置</string>
    <string name="domain">域名设置 (备用)</string>
    <string name="domain_url">http://www.silisili.in</string>
    <string name="search_title">检索方式</string>
    <string name="set_light_theme">切至亮色主题</string>
    <string name="set_dark_theme">切至暗色主题</string>
    <!-- webViewDialog 文本 -->
    <string name="analysis_line">解析线路</string>
    <string name="anthology">选集</string>
    <!-- menu通用文本 -->
    <string name="phone_model">手机版</string>
    <string name="pc_model">电脑版</string>
    <string name="down">下载</string>
    <string name="open_in_browser">通过浏览器打开</string>
    <!-- 收藏相关文本 -->
    <string name="favorite">追番</string>
    <string name="empty_favorite">空空如也呢(－∀＝)</string>
    <string name="has_favorite">已追番</string>
    <string name="remove_favorite">弃番</string>
    <string name="remove_api">移除</string>
    <!-- 关于相关文本 -->
    <string name="about">关于</string>
    <string name="open_source_library">开源相关</string>
    <string name="source">数据来源</string>
    <string name="statement">声明</string>
    <string name="statement_desc">仅供学习交流\n禁止非法传播或用于商业用途</string>
    <string name="test_model">测试</string>
    <string name="test_model_desc">OnePlus 7 Pro\nAndroid 11</string>
    <string name="now_version">当前版本</string>
    <string name="update_log">更新日志</string>
    <string name="check_update">检测更新</string>
    <string name="check_update_text">检测更新中&#8230;</string>
    <string name="download">下载中,请等待</string>
    <string name="ck_network_error">连接Github超时，请重试</string>
    <string name="ck_network_error_start">连接Github超时，检测更新失败</string>
    <string name="ck_error_start">Github返回出错，检测更新失败</string>
    <string name="try_again">重试</string>
    <string name="no_new_version">已是最新版本，无需更新</string>
    <string name="cancel">取消</string>
    <string name="download_error">下载失败</string>
    <string name="find_new_version">发现新版本</string>
    <string name="update_now">现在更新</string>
    <string name="update_after">暂不更新</string>
    <string name="final_compile">最后编译日期</string>
    <string name="final_compile_time">2021年6月14日</string>
    <string name="cache">缓存目录</string>
    <string name="cache_text">/SilisiliAnime/\n卸载后自行删除此目录</string>
    <string name="github">Github</string>
    <string name="github_url">https://github.com/670848654/Silisili</string>
    <!-- 快捷方式文本 -->
    <string name="disableMsg">不可用</string>
    <string name="tagShortName">动漫分类</string>
    <string name="tagLongName">动漫分类</string>
    <string name="favoriteShortName">我的追番</string>
    <string name="favoriteLongName">我的追番</string>
    <string name="searchShortName">搜索动漫</string>
    <string name="searchLongName">搜索动漫</string>
    <!-- 播放器文本 -->
    <string name="set_user_speed">设置快进/快退时长</string>
    <string name="player_setting_title">播放器设置</string>
    <string name="picture_in_picture_title">画中画</string>
    <string name="hide_progress">播放时隐藏底部进度</string>
    <string name="player_other_title">其他操作</string>
    <string name="play_with_external_player">使用外部播放器播放</string>
    <string name="open_external_browser">通过浏览器访问原地址</string>
    <string name="url_copied">下载地址已复制到剪切板</string>
    <string name="select_tools">请选择下载工具</string>
    <string name="tools_not_found">没有找到匹配的程序</string>
    <string name="click_to_sniffer">尝试网页嗅探解析</string>
    <string name="open_drama_list">打开选集列表</string>
    <string name="authorize_msg">点击前往授权</string>
    <string name="authorize_title_msg">缺少必要权限</string>
    <string name="file_manger_msg">Android 11 需要授予所有文件的管理权限</string>

    <string name="device_title">设备列表</string>
    <string name="notice">请选择连接设备，连接设备后才可播放</string>
    <string name="selectedText">已选中: %s</string>
    <string name="progress">进度</string>
    <string name="volume">音量</string>
    <string name="mute">静音</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="exit">退出</string>

    <string-array name="speed_item">
        <item>5s</item>
        <item>10s</item>
        <item>15s</item>
        <item>30s</item>
    </string-array>

    <string-array name="week_array">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string-array name="prefix">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
