<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/window_bg">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/silisili"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/icon1"
                    android:src="@drawable/baseline_bug_report_white_48dp"
                    android:tint="@color/text_color_primary"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />

                <LinearLayout
                    android:layout_toRightOf="@+id/icon1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/source"
                        android:textColor="@color/text_color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/app_name"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/icon2"
                    android:src="@drawable/baseline_error_white_48dp"
                    android:tint="@color/text_color_primary"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />

                <LinearLayout
                    android:layout_toRightOf="@+id/icon2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/statement"
                        android:textColor="@color/text_color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/statement_desc"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/icon3"
                    android:src="@drawable/baseline_phonelink_setup_white_48dp"
                    android:tint="@color/text_color_primary"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />

                <LinearLayout
                    android:layout_toRightOf="@+id/icon3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/test_model"
                        android:textColor="@color/text_color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/test_model_desc"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/icon5"
                    android:src="@drawable/baseline_clear_all_white_48dp"
                    android:tint="@color/text_color_primary"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />

                <LinearLayout
                    android:layout_toRightOf="@+id/icon5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/cache"
                        android:textColor="@color/text_color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/cache"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/icon4"
                    android:src="@drawable/baseline_code_white_48dp"
                    android:tint="@color/text_color_primary"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />

                <LinearLayout
                    android:layout_toRightOf="@+id/icon4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/final_compile"
                        android:textColor="@color/text_color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/final_compile_time"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/check_update"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/icon6"
                    android:src="@drawable/baseline_cloud_download_white_48dp"
                    android:tint="@color/text_color_primary"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />

                <LinearLayout
                    android:layout_toRightOf="@+id/icon6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/now_version"
                        android:textColor="@color/text_color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/version"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/github"
                android:layout_marginTop="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/icon7"
                    android:src="@drawable/github"
                    android:tint="@color/text_color_primary"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp" />

                <LinearLayout
                    android:layout_toRightOf="@+id/icon7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/github"
                        android:textColor="@color/text_color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/github_url"
                        android:textColor="#8C8C8C"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/window_bg"
                android:orientation="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>